[gd_scene load_steps=3 format=2]

[ext_resource path="res://Styles/style1.tres" type="Theme" id=1]
[ext_resource path="res://Scripts/Pages/EntityMenu/entityFieldItemSprite.gd" type="Script" id=2]

[node name="entityFieldItemSprite" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="FileDialog" type="FileDialog" parent="."]
margin_left = 228.0
margin_top = 90.0
margin_right = 834.0
margin_bottom = 514.0
window_title = "Открыть файл"
mode = 0
access = 2
filters = PoolStringArray( "*.png", "*.bmp" )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="HBoxContainer"]
margin_right = 86.0
margin_bottom = 20.0
size_flags_vertical = 0
text = "Test text: "

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 90.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextEdit" type="TextEdit" parent="HBoxContainer/VBoxContainer"]
margin_right = 934.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 3
text = "dasdasdasd"

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 34.0
margin_right = 934.0
margin_bottom = 64.0

[node name="changeSpriteBtn" type="Button" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
margin_right = 898.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 3
text = "Change Sprite"

[node name="removeSpriteBtn" type="Button" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 902.0
margin_right = 934.0
margin_bottom = 30.0
text = " X "

[node name="Control" type="Control" parent="HBoxContainer/VBoxContainer"]
margin_top = 68.0
margin_right = 934.0
margin_bottom = 68.0

[node name="Sprite" type="Sprite" parent="HBoxContainer/VBoxContainer/Control"]
centered = false

[connection signal="file_selected" from="FileDialog" to="." method="_on_FileDialog_file_selected"]
[connection signal="button_down" from="HBoxContainer/VBoxContainer/HBoxContainer/changeSpriteBtn" to="." method="_on_changeSpriteBtn_button_down"]
[connection signal="button_down" from="HBoxContainer/VBoxContainer/HBoxContainer/removeSpriteBtn" to="." method="_on_removeSpriteBtn_button_down"]
